<resources>
    <string name="app_name">TripHub</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    <!--  Intro Screen  -->
    <string name="intro_image_content_description">image</string>
    <string name="intro_main_text">Let\'s start planning your next trip</string>
    <string name="intro_secondary_text">Plan your trips and share them with others.\nMake your trips unforgettable.</string>
    <string name="intro_sign_in">Sign In</string>
    <string name="intro_sign_up">Sign Up</string>
    <!--  !Intro Screen  -->

    <!--  SignUp Screen  -->
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_secondary_text">Enter name, email and password\n to register your new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up_name_error">Please enter a name</string>
    <string name="sign_up_email_error">Please enter an email</string>
    <string name="sign_up_password1_error">Please enter a password</string>
    <string name="sign_up_password2_error">Please repeat the password</string>
    <string name="sign_up_passwords_different_error">Entered passwords are different</string>
    <string name="sign_up_success">Registration success</string>
    <!--  !SignUp Screen  -->

    <!--  SignIn Screen  -->
    <string name="sign_ip_title">SIGN IN</string>
    <string name="sign_in_secondary_text">Enter your email and password to log in</string>
    <string name="sign_in_email_error">Please enter an email</string>
    <string name="sign_in_password_error">Please enter a password</string>
    <string name="sign_in_error">Invalid email or password</string>
    <string name="failed_to_load_user_data">Failed to load user data</string>
    <string name="image_content_description">image</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="load_user_data_error">Could not load user data</string>
    <string name="load_user_trips">Could not load trips</string>
    <!--  !SignIn Screen  -->

    <!--  MyProfile Screen  -->
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="rationale_positive_button">GO TO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="rationale_message">It look like you have turned off permission required for this feature. It can be enabled under the Applications Settings.</string>
    <string name="select_action">Select Action</string>
    <string name="select_image_from_gallery">Select image from Gallery</string>
    <string name="take_photo">Capture photo from Camera</string>
    <string name="could_not_update_user">Could not update user data. Check your connection</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="update_password">Update Password</string>
    <string name="my_profile_enter_old_password">Please enter old password</string>
    <string name="my_profile_enter_new_password">Please enter new password</string>
    <string name="my_profile_repeat_new_password">Please repeat new password</string>
    <string name="my_profile_entered_new_passwords_different_error">Entered new passwords are different</string>
    <string name="my_profile_password_update_success">Password updated successfully</string>
    <string name="my_profile_password_update_failure">Could not update the password. Error: %1$s</string>
    <!--  !MyProfile Screen  -->

    <!--  Main Screen  -->
    <string name="add_trip">Add Trip</string>
    <string name="menu">Menu</string>
    <string name="chat">Chat</string>
    <!--  !Main Screen  -->

    <!--  Map Screen  -->
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="button_arrow_up">Button arrow up</string>
    <string name="button_arrow_down">Button arrow down</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="map_input_type">Map Input Type</string>
    <string name="select">Select</string>
    <string name="find_place">Find Place</string>
    <string name="go">GO</string>
    <string-array name="mapInputTypes">
        <item>Marker</item>
        <item>Polyline</item>
        <item>Polygon</item>
        <item>Circle</item>
    </string-array>
    <!--  !Map Screen  -->

    <!--  Add Trip Screen  -->
    <string name="create_new_trip">Create New Trip</string>
    <string name="description">Description</string>
    <string name="create_trip">Create Trip</string>
    <string name="add_trip_name_error">Please enter name of trip</string>
    <string name="create_new_trip_error">Could not create new Trip</string>
    <string name="no_trips">No trips created</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="delete_trip">Are you sure you want to delete this trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trip_deletion_error">Failed to delete a trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="update_trip">Update Trip</string>
    <!--  !Add Trip Screen  -->

    <!--  Trip Screen  -->
    <string name="board">Board</string>
    <string name="map">Map</string>
    <string name="channel">Channel</string>
    <string name="hint_card_name">Card Name</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="members">Members</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="people">people</string>
    <string name="add_person">Add Person</string>
    <string name="search_person">Search Person</string>
    <string name="add">Add</string>
    <string name="enter_person_email">Please enter person\'s email address</string>
    <string name="no_such_person">No such person found</string>
    <string name="error_person_data">Error while getting person data</string>
    <string name="error_adding_person_to_trip">Could not add a person to the trip</string>
    <string name="could_not_load_people_trip">Could not load people assigned to this trip</string>
    <string name="trip">Trip</string>
    <string name="remove_person_from_trip">Are you sure you want to remove this person from the trip?</string>
    <string name="could_not_remove_person_from_trip">Could not remove this person</string>
    <string name="cannot_remove_yourself">You can\'t remove yourself</string>
    <string name="could_not_refresh_trip">Could not refresh trip data</string>
    <string name="send">send</string>
    <string name="type_a_message">Type a message</string>
    <string name="friends">Friends</string>
    <string name="my_friends">My Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="could_not_load_user_data">Could not load user data</string>
    <string name="delete_friend_request">Are you sure you want to delete this friend request?</string>
    <string name="accept_friend_request">Are you sure you want to accept this friend request?</string>
    <string name="could_not_load_friend_requests">Could not load friend requests</string>
    <string name="could_not_remove_friend_request">Could not remove friend request</string>
    <string name="could_not_send_friend_request">Could not send friend request</string>
    <string name="could_not_add_new_friend">Could not add a new friend</string>
    <string name="delete_friend">Are you sure you want to remove this friend?</string>
    <string name="could_not_remove_friend">Could not remove friend</string>
    <string name="could_not_load_friends">Could not load friends</string>
    <string name="could_not_load_private_chat">Could not load private conversations</string>
    <string name="empty" />
    <string name="could_not_load_chat">Could not load chat</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="radius_in_meters">Radius in meters</string>
    <string name="fill_color">Fill Color</string>
    <string name="stroke_color">Stroke Color</string>
    <string name="confirm">Confirm</string>
    <string name="enter_circle_radius">Enter circle radius in meters</string>
    <string name="select_circle_fill_color">Select circle fill color</string>
    <string name="select_circle_stroke_color">Select circle stroke color</string>
    <string name="remove">Remove</string>
    <string name="line_color">Line Color</string>
    <string name="solid">Solid</string>
    <string name="dash">Dash</string>
    <string name="dot">Dot</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="polygons_at_least_3_points">Polygons should have at least 3 points</string>
    <string name="title">Title</string>
    <string name="snippet">Snippet</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="marker_title_empty_error_msg">Marker title field must not be empty</string>
    <string name="event">Event</string>
    <string name="add_event">Add Event</string>
    <string name="create_event">Create Event</string>
    <string name="date">Date</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="check_weather">Check Weather</string>
    <string name="miles_per_hour">miles/hour</string>
    <!--  !Trip Screen  -->

</resources>