<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".activities.IntroActivity">

    <com.example.triphub.utils.TextViewNoClipping
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hurricane_regular"
        android:padding="@dimen/intro_title_padding"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="@dimen/intro_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIntroImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/intro_image_content_description"
        android:src="@drawable/intro_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvIntroMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/intro_main_text_padding_top"
        android:text="@string/intro_main_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/intro_main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIntroImage" />

    <TextView
        android:id="@+id/tvIntroSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/intro_secondary_text_padding_top"
        android:text="@string/intro_secondary_text"
        android:textAlignment="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_secondary_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntroMainText" />

    <android.widget.Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_btn_margin_start_end"
        android:layout_marginTop="@dimen/intro_btn_sign_in_margin_top"
        android:layout_marginEnd="@dimen/intro_btn_margin_start_end"
        android:background="@drawable/button_rounded_gradient"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/intro_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/intro_btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntroSecondaryText" />

    <android.widget.Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_btn_margin_start_end"
        android:layout_marginTop="@dimen/intro_btn_sign_up_margin_top"
        android:layout_marginEnd="@dimen/intro_btn_margin_start_end"
        android:background="@drawable/button_rounded_border"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/intro_sign_up"
        android:textColor="@color/intro_btn_text_color"
        android:textSize="@dimen/intro_btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>